[tool.poetry]
name = "pricebot"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
pandas = "^1.1.3"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
